# YipOS

./: LICENSE  README.md  build_ct2.bat  build_win.bat  generate_macro_atlas.py  generate_pda_rom.py  generate_pda_rom_ext.py  generate_qr_test.py
dm-worker/: worker.js
yip_os/: CMakeLists.txt  SPRINT5_INTRP_HANDOFF.md  bugs.md  build.sh  build_ct2_cpu_win.bat  build_installer.bat  build_mecab_win.bat  build_win.bat
yip_os/assets/: yip_os.rc
yip_os/cmake/: GitHash.cmake
yip_os/docs/: BUILD_MECAB_WIN.md  CUDA_SETUP.md  whisper-avx512-fix.md
yip_os/docs/latex/: manual.tex  section3_understanding_the_display.md  write_head_timing.tex
yip_os/installer/: LICENSE.txt  app_installer.nsi
yip_os/src/: main.cpp
yip_os/src/app/: PDAController.cpp  PDAController.hpp  PDADisplay.cpp  PDADisplay.hpp
yip_os/src/audio/: AudioPlayer.cpp  AudioPlayer.hpp  AudioPlayer_linux.cpp  AudioPlayer_windows.cpp  WhisperWorker.cpp  WhisperWorker.hpp
yip_os/src/core/: Config.cpp  Config.hpp  Glyphs.hpp  Logger.cpp  Logger.hpp  PathUtils.hpp  TimeUtil.hpp
yip_os/src/img/: VQEncoder.cpp  VQEncoder.hpp
yip_os/src/media/: MediaController.hpp  MediaController_linux.cpp  MediaController_windows.cpp
yip_os/src/net/: ChatClient.cpp  ChatClient.hpp  DMClient.cpp  DMClient.hpp  IShockClient.hpp  NetTracker.cpp  OSCManager.cpp  OSCManager.hpp  OSCQueryServer.cpp  OpenShockClient.cpp  OpenShockClient.hpp  PiShockClient.cpp  PiShockClient.hpp  ShockManager.cpp  ShockManager.hpp  StockClient.cpp  StockClient.hpp  TwitchClient.cpp  VRCAvatarData.cpp  VRCAvatarData.hpp  VRCXData.cpp  VRCXData.hpp
yip_os/src/platform/: ScreenCapture_windows.cpp  SystemStats_windows.cpp
yip_os/src/screens/: AVTRChangeScreen.cpp  AVTRChangeScreen.hpp  AVTRCtrlScreen.cpp  AVTRCtrlScreen.hpp  AVTRDetailScreen.cpp  AVTRDetailScreen.hpp  AVTRScreen.cpp  AVTRScreen.hpp  BFIData.hpp  BFIParamScreen.cpp  BFIParamScreen.hpp  BFIScreen.cpp  CCConfScreen.cpp  CCScreen.cpp  CCScreen.hpp  CalibrateScreen.cpp  CalibrateScreen.hpp  ChatDetailScreen.cpp  ChatDetailScreen.hpp  ChatScreen.cpp  ChatScreen.hpp  ConfScreen.cpp  ConfScreen.hpp  DMComposeScreen.cpp  DMComposeScreen.hpp  DMDetailScreen.cpp  DMDetailScreen.hpp  DMMessageScreen.cpp  DMMessageScreen.hpp  DMPairScreen.cpp  DMPairScreen.hpp  DMScreen.cpp  DMScreen.hpp  HeartScreen.cpp  HomeScreen.cpp  HomeScreen.hpp  IMGScreen.cpp  IMGScreen.hpp  INTRPConfScreen.cpp  INTRPLangScreen.cpp  (+31 more)
yip_os/src/translate/: MeCabWrapper.cpp  TranslationWorker.cpp  TranslationWorker.hpp
yip_os/src/ui/: UIManager.cpp  UIManager.hpp  UIManager_Audio.cpp  UIManager_Config.cpp  UIManager_DM.cpp  UIManager_Data.cpp  UIManager_INTRP.cpp  UIManager_OSC.cpp  UIManager_OpenShock.cpp  UIManager_Shock.cpp  UIManager_Status.cpp
